# Mini-Operating-System

./: CMakeLists.txt  MINI_INSTAGRAM.cpp  MINI_INSTAGRAM.h  Manager.cpp  Manager.h  README.md  UI.cpp  UI.h  application.cpp  application.h  fileSystem.cpp  fileSystem.h  hardware.cpp  hardware.h  horse.cpp  horse.h  in  iq.cpp  iq.h  m  main.cpp  os.cpp  os.h  password.txt  typing_test.cpp  typing_test.h
